Actions
Bug #8164
closedipf: bad preprocessor use and need FALLTHROUGH
Start date:
2017-05-05
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The constructs like:
#if SOLARIS
are really upsetting the gcc 7.1 and are ugly as hell especially when combined with defined(XXX).
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit af5f29ddbc34ad2a499813f913a39accc4c41f0d
commit af5f29ddbc34ad2a499813f913a39accc4c41f0d Author: Toomas Soome <tsoome@me.com> Date: 2017-05-08T08:42:34.000Z 8164 ipf: bad preprocessor use and need FALLTHROUGH Reviewed by: Jason King <jason.brian.king+illumos@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>
Actions