8164 ipf: bad preprocessor use and need FALLTHROUGH Reviewed by: Jason King <jason.brian.king+illumos@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>